corrected font size causing problems on mobile version

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -13,18 +13,18 @@ html, body {
   font-family: "Playfair Display", serif;
 }
 h2{
-  font-size: 4em;
+  font-size: 3em;
   margin: 0;
 }
 h3{
   font-family: "Playfair Display", serif;
-  font-size: 3em;
+  font-size: 2em;
   margin: 0;
 }
 
 p, li{
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 2em;
+  font-size: 1.5em;
   margin: 0;
 }
 
@@ -44,7 +44,7 @@ ul, ol{
   color: $primary_2;
   margin: 0;
   padding: 1%;
-  font-size: 5em;
+  font-size: 4em;
   text-align: center;
 }
 .footer{
